# backend/dto/category_dto.go
@@ -1,0 +1,22 @@
+package dto
+
+import "github.com/google/uuid"
+
+type CreateCategoryRequest struct {
+	Name        string `json:"name" binding:"required,min=2,max=100"`
+	Description string `json:"description" binding:"omitempty"`
+}
+
+type UpdateCategoryRequest struct {
+	Name        *string `json:"name" binding:"omitempty,min=2,max=100"`
+	Description *string `json:"description" binding:"omitempty"`
+}
+
+type CategoryResponse struct {
+	ID          uuid.UUID `json:"id"`
+	Name        string    `json:"name"`
+	Slug        string    `json:"slug"`
+	Description string    `json:"description"`
+	CreatedAt   string    `json:"createdAt"`
+	UpdatedAt   string    `json:"updatedAt"`
+}
